--- a/index.html
+++ b/index.html
@@ -22,12 +22,8 @@
     <a href="css/two">css背景图案</a>
   </div>
   <div id="website_list_container">
-    <div>Day 7 <span><a href="css/two">css背景图案</a></span></div>
-    <div>Day 6 <span><a href="css/one">css图形</a></span></div>
-    <div>Day 5 <span><a href="game/game-table">蓝色拼图小游戏</a></span></div>
-    <div>Day 4 <span><a href="game/game-color">颜色测试小游戏</a></span></div>
-    <div>Day 3 <span><a href="animation/animate_td">颜色自动消失</a></span></div>
-    <div>Day 2 <span><a href="animation/animate_color">颜色随机变化</a></span></div>
-    <div>Task 1 <span><a href="animation/table_css">颜色变化</a></span></div>
+    <div>Task1_4 <span><a href="task1_4">任务四：定位和居中问题</a></span></div>
+    <div>Task1_3 <span><a href="task1_3">任务三：三栏式布局</a></span></div>
+    <div>Task1_1 <span><a href="task1_1">任务一：零基础HTML编码</a></span></div>
   </div>
 </html>
