--- a/task1_10/index.html
+++ b/task1_10/index.html
@@ -6,11 +6,11 @@
 	<link rel="stylesheet" type="text/css" href="css/task.css">
 </head>
 <body>
-<div class="flex">
-    <div class="flex-item flex_item1">A</div>
-    <div class="flex-item flex_item2">B</div>
-    <div class="flex-item flex_item3">C</div>
-    <div class="flex-item flex_item4">D</div>
+<div class="flex-container">
+    <div class="flex-item flex-item1">A</div>
+    <div class="flex-item flex-item2">B</div>
+    <div class="flex-item flex-item3">C</div>
+    <div class="flex-item flex-item4">D</div>
 </div>
 </body>
 </html>
